--- a/Backend/.env_sample
+++ b/Backend/.env_sample
@@ -1,3 +1,11 @@
 PORT=""
 MONGODB_URL=""
 JWT_SECRET=""
+
+# for nodemailer
+NODEMAILER_EMAIL=""
+NODEMAILER_PASSWORD=""
+NODEMAILER_HOST=""
+NODEMAILER_PORT=""
+NODEMAILER_SECURE=""
+NODEMAILER_SERVICE=""
